--- a/www/index.html
+++ b/www/index.html
@@ -28,7 +28,7 @@
 
   
   <script type="text/javascript" src="js/jquery.min.js"></script>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.8.2/angular.min.js"></script>
+  <script type="text/javascript" src="js/angular.min.js"></script>
   <script type="text/javascript" src="js/angular-touch.js"></script>
   <script type="text/javascript" src="js/ngTouch.min.js"></script>
     
@@ -36,8 +36,8 @@
   <link rel="stylesheet" href="css/icons.css">
   <link rel="stylesheet" href="css/app.css">
   <link rel="stylesheet" href="css/style.css">
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
+  <script src="js/supabase-js.js"></script>
+  <script src="js/moment.min.js"></script>
 </head>
 
 <body ng-controller="MainController" ng-init="init()" id="body" class="noselect" ontouchstart="">
@@ -195,7 +195,7 @@
   <script src="js/controllers/RendezvousController.js"></script>
   <script src="js/controllers/ClickncollectController.js"></script>
   <script src="js/controllers/AfterSaleController.js"></script>
-  
+  <script src="js/controllers/ContactController.js"></script>
   
 </body>
 </html>
