commit take pic

--- a/www/pages/home.html
+++ b/www/pages/home.html
@@ -27,7 +27,7 @@
         </div>-->
 
 		<div style="height: 0;"><input type="file" id="file" accept="image/*"/></div>
-        <img src="" id="profileimg"/><!-- style="display:none"-->
+        <img src="" id="profileimg" style="display:none"/><!---->
 
         <div class="fab-backdrop"></div>
         <div class="fab fab-right-bottom" ng-class="{'hidden': menu_item!='vsg'}">
