--- a/www/pages/legal.html
+++ b/www/pages/legal.html
@@ -9,11 +9,6 @@
 				</a>
 			</div>
 			<div class="title">Mentions légales</div>
-			<div class="right">
-				<a href="#" class="link" ng-click="init()">
-					<div class="f7-icons">eyeglasses</div>
-				</a>
-			</div>
 		</div>
 	</div>
 	<div class="page-content" style="background-color: #F2F2F2;">
@@ -31,21 +26,10 @@
 					<u>Numéro de TVA Intracommunautaire</u> : xxxxxxxxxxxx<br>
 					<u>Dirigeant de la société</u> : Mr Nshombo Mulenda Giresse<br>
 					contact@opticsolutions.fr<br><br>
-					<b>Hébergeur</b> : supabase
+					<b>Hébergeur</b> : Supabase
                 </div>
             </div>
         </div>
 
-		<!--
-        <div class="above_list_optk">
-
-            <form class="list" id="my-form" style="margin-top: 0px; margin-bottom: 15px; text-transform: none;">
-                <div style="margin:15px 15px 0 10px">
-
-                </div>
-            </form>
-
-        </div>-->
-        
 	</div>
 </div>
