--- a/www/pages/home.html
+++ b/www/pages/home.html
@@ -241,7 +241,7 @@
                                 </div>
                                 <div class="swiper-slide" ng-show="firstPicTaken">
                                     <div class="xform form_triangle_up">
-                                        <img src="assets/img/vsg/trianglehaut.png"/>
+                                        <img src="assets/img/vsg/triangle-haut.png"/>
                                     </div>
                                 </div>
                                 <div class="swiper-slide" ng-show="firstPicTaken">
@@ -418,7 +418,7 @@
                     <div class="block" style="margin-top: 0;">
                         <p style="color: var(--f7-theme-color); letter-spacing:3px; font-weight:bold;">
                             RESTEZ INFORMÉ DES<br>
-                            &nbsp;&nbsp;&nbsp;&nbsp;DERNIERES TENANCES
+                            &nbsp;&nbsp;&nbsp;&nbsp;DERNIERES TENDANCES
                         </p>
 
                         <div class="trends_btn">
