--- a/www/pages/howitworks.html
+++ b/www/pages/howitworks.html
@@ -15,89 +15,49 @@
 
 	<div class="page-content howitworks">
 		
-		<div style="text-align: center; margin-top:20px; font-size:20px;">COMMENT CA MARCHE ?</div>
-		<p>
-			Trouver l’opticien adapté à ses besoins devient encore plus simple !
-			En quelques clics, nous vous invitons à préparer votre visite vers l’opticien adapté à vos besoins depuis chez vous.
-			À la recherche d’un nouvel Opticien ou déjà fidèle à votre Opticien, cette application est utile pour vous et pour votre opticien.
-			Voici comment :
-		</p>
+		
+		<div class="opticien_blue_area" style="min-height:130px; padding:25px 0 55px 0; text-align:center;">
+			<img src="assets/img/osf_by.png" style="width:100px"/>
+		</div>
 
-		<div class="pm_title">1. Si vous recherchez un nouvel Opticien</div>
-		<p class="ins">
-			L’application vous propose de mieux connaître les
-			caractéristiques de votre visage dans le but de faciliter votre
-			choix de monture, pour qu’une fois chez l’opticien, vous
-			puissiez gagner du temps dans vos essayages et l’optimiser
-			par des conseils plus poussés de l’opticien concernant la
-			qualité de vos verres.
-			Elle vous propose une cabine d'essayage virtuel, pour essayer
-			à votre rythme différentes montures afin de confirmer le style
-			qui correspond à votre personnalité.
-			Elle géolocalise les Opticiens autour de vous, met en avant
-			les détails de leurs services et enfin propose des créneaux de
-			rendez-vous disponibles chez l’opticien de votre choix pour
-			votre confort.
-			Elle vous propose un service après-vente simplifié avec des
-			réponses claires, en adéquation avec vos demandes.
-		</p>
+		<div class="above_list_optk on_opticien">
+			COMMENT CA MARCHE ?
+			<div class="line_hiw"></div>
+			<p>
+				Trouver un opticien engagé avec qui partager des valeurs communes et qui s’adapte à vos besoins devient encore plus simple !
+			</p>
+			<p>
+				En quelques clics, nous vous invitons à donner du sens à l’acte d’achat de vos lunettes en vous proposant une expérience client originale, où vous 
+				allez trouver ce qui correspond à votre recherche mais également contribuer à l’avancement d’une action sociale et/ou environnementale
+			</p>
+			<p class="center green">
+				À la recherche d’un nouvel Opticien ou déjà fidèle à votre Opticien, cette application est utile pour vous et pour votre opticien
+			</p>
+		</div>
 
-		<div class="pm_title">2. Si vous avez déjà votre Opticien préféré</div>
-		<p class="ins">
-			L’application vous permet d’obtenir des conseils sur vos
-			envies de changer de montures ‘changement de forme et/ou
-			de couleur’, de faire des essayages et de transmettre à votre
-			opticien vos differents documents.
-			Vous aurez la possibilité de recommander votre opticien par
-			votre note étoilée et ainsi lui permettre d'être plus visible.
-			En mettant votre opticien dans vos favoris, vous accédez
-			directement à sa page opticien pour être informé de son
-			actualité, reprendre un rendez-vous ou le contacter dans le
-			cadre d’un service après-vente.
+		
+		<div class="opticien_gray_area" style="height:130px;">
 
-		</p>
-
-		<div class="pm_title">3. Si vous avez du mal à trouver ce qu’il vous faut ?</div>
-		<p class="ins">
-			Plus besoin de faire le tour des Opticiens. Grâce à l’essayage
-			virtuel, vous pourrez sélectionner les modèles qui vous
-			plaisent et chercher l’opticien le plus proche de chez vous qui
-			propose la marque recherchée et ce dernier vous
-			accompagnera dans votre recherche.
-
-		</p>
-
-		<div class="pm_title">4. Découvrez également les produits optiques avec la page tendances</div>
-		<p class="ins">
-			Une page dédiée aux nouvelles tendances, aux produits
-			ayant le moins d’impact sur l’environnement et l’essentiel
-			pour prendre soin de votre vue.
-
-		</p>
-
-		<div class="pm_title">5. Pourquoi bien remplir son profil de connexion ?</div>
-		<p class="ins">
-			Cela va permettre à votre opticien après votre accord, de
-			recevoir à votre initiative les documents essentiels pour
-			mieux préparer votre rendez-vous et sélectionner les
-			produits adaptés à vos besoins.
-			Il permet aussi à l’opticien d’ajuster régulièrement son offre
-			afin de répondre au mieux à vos besoins mais également de
-			vous proposer des services adaptés au moment où vous en
-			aurez le plus besoin.
-			Quel que soit votre cas, notre mission est de vous emmener tout
-			droit vers l’opticien adapté et de permettre à l'Opticien d’améliorer
-			ses services pour vous satisfaire.
-			De même, n’hésitez pas à nous écrire afin d’améliorer notre service
-			pour mieux vous accompagner dans votre recherche d’Opticien.
-			OPTIC STORE FINDER, c’est un guide mais, c’est votre liberté de
-			choisir pour obtenir le meilleur service de la part de votre
-			Opticien.
-		</p>
-
-		<p style="margin-bottom:50px">
-			À votre service,
-		</p>
-
+			<div class="optic_tit_cat">Vous recherchez un opticien engagé</div>
+			
+			<p>
+				L’application vous propose de découvrir des opticiens engagés, 
+				géolocalisés, les plus proches de vous. 
+			</p>
+			<p>
+				Ce qu’ils ont de mieux à vous offrir c’est leur engagement d’abord dans le 
+				service pour vos besoins en santé visuelle et ensuite dans les valeurs 
+				communes de solidarité et de soutien à une économie responsable qu’ils 
+				tiennent à partager avec vous. 
+			</p>
+			<p class="center green">
+				Grâce à sa page virtuelle, vous avez connaissance de ses offres et services 
+				puis de ses différents engagements sociétaux.
+				Vous aurez la possibilité de rechercher votre opticien en fonction de son 
+				lieu d’exercice, de ses engagements, de ses offres et services ou de ses 
+				disponibilités.
+			</p>
+		</div>
+		
 	</div>
 </div>
