--- a/www/pages/parametres.html
+++ b/www/pages/parametres.html
@@ -10,11 +10,11 @@
 				</a>
 			</div>
 			<div class="title">Paramètres</div>
-			<div class="right">
+			<!--<div class="right">
 				<a href="#" class="link" ng-click="init()">
 					<div class="f7-icons">eyeglasses</div>
 				</a>
-			</div>
+			</div>-->
 		</div>
 	</div>
 
@@ -89,13 +89,6 @@
 							</li>
 							<li>
 								<div>Qui peut télécharger mes données (personne ou mon favori)</div>
-								<label class="toggle toggle-init">
-									<input type="checkbox" checked />
-									<span class="toggle-icon"></span>
-								</label>
-							</li>
-							<li>
-								<div>Fermer le compte</div>
 								<label class="toggle toggle-init">
 									<input type="checkbox" checked />
 									<span class="toggle-icon"></span>
