--- a/www/pages/howitworks.html
+++ b/www/pages/howitworks.html
@@ -33,10 +33,14 @@
 			<p class="center green">
 				À la recherche d’un nouvel Opticien ou déjà fidèle à votre Opticien, cette application est utile pour vous et pour votre opticien
 			</p>
+			<div class="bgbtngray1">
+				Voici comment
+			</div>
 		</div>
 
+		<div class="giresse1"><div></div></div>
 		
-		<div class="opticien_gray_area" style="height:130px;">
+		<div class="opticien_gray_area hwt">
 
 			<div class="optic_tit_cat">Vous recherchez un opticien engagé</div>
 			
@@ -50,7 +54,7 @@
 				communes de solidarité et de soutien à une économie responsable qu’ils 
 				tiennent à partager avec vous. 
 			</p>
-			<p class="center green">
+			<p>
 				Grâce à sa page virtuelle, vous avez connaissance de ses offres et services 
 				puis de ses différents engagements sociétaux.
 				Vous aurez la possibilité de rechercher votre opticien en fonction de son 
@@ -58,6 +62,164 @@
 				disponibilités.
 			</p>
 		</div>
+
+		<div class="giresse2"><div></div></div>
+
+		<div class="above_list_optk on_opticien hwt">
+
+			<div class="optic_tit_cat">Les engagements</div>
+			
+			<p>
+				Votre liberté de choisir est notre priorité, s’engager pour un monde meilleur est notre devoir.
+				Voilà pourquoi Optic store Finder se propose d'être un réseau communautaire afin de rassembler autour 
+				des besoins tout aussi importants que sont la vision, l'éco responsabilité et la solidarité.
+			</p>
+			<p class="green">
+				Notre palette d’engagements se compose de :
+			</p>
+			<span> &rarr; L'Éco-responsabilité :</span>
+			<table class="tab14">
+				<tr>
+					<td>
+						<div>
+							<span class="helper"></span>
+							<img src="assets/img/howto/circuit_court.png"/>
+						</div>
+					</td>
+					<td>
+						<span>CIRCUIT - COURT</span>
+						Mise en avant du savoir-faire local et/ou régional
+						avec des produits et services sur au moins 50% 
+						du magasin.
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<div>
+							<span class="helper"></span>
+							<img src="assets/img/howto/mif_lunettes.png"/>
+						</div>
+					</td>
+					<td>
+						<span>MADE IN FRANCE</span>
+						Au moins 50% des produits ou services sont MIF
+						ou OFG
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<div>
+							<span class="helper"></span>
+							<img src="assets/img/howto/recyclage.png"/>
+						</div>
+					</td>
+					<td>
+						<span>RECYCLAGE</span>
+						Collectes des montures.
+						Utilisation d’eau en circuit fermé.
+						Tri des dechets.
+					</td>
+				</tr>
+			</table>
+			<span> &rarr; Actions solidaires 1 pour 1 :</span>
+			<p>
+				Pour chaque lunette achetée chez l’opticien grâce à notre mise en relation, 
+				vous pouvez si vous le souhaitez verser 1€ (un euro) à l’association de votre choix. 
+			</p>
+			<p>
+				Ce don vous sera proposé une fois que vous aurez récupéré vos lunettes 
+				avec la totale satisfaction, gage de notre engagement envers vous.
+			</p>
+			<p>
+				Nos actions solidaires sont tournées vers 3 principaux secteurs :
+			</p>
+			<table class="tab15">
+				<tr>
+					<td><div><img src="assets/img/howto/maladies_de_la_vision.png"/></div></td>
+					<td><div><img src="assets/img/howto/protecenfance.png"/></div></td>
+					<td><div><img src="assets/img/howto/rubanblanc.png"/></div></td>
+				</tr>
+				<tr>
+					<td>Maladies rares de la vision.</td>
+					<td>Protection de l’enfance.</td>
+					<td>Lutte contre les violences faites aux femmes.</td>
+				</tr>
+			</table>
+			<p>
+				Pour chaque secteur, une association différente sera représentée par trimestre et sera 
+				mise en avant sur la page tendance dans l’application
+			</p>
+			<p>
+				L’Opticien aura la liberté de choisir les actions qu’il veut soutenir et 
+				celles-ci seront visibles sur sa page dans l’application.
+			</p>
+			<p>
+				Vous pourrez donc en tant qu’utilisateur choisir votre opticien en fonction d’une action que 
+				vous soutenez ensemble ou d’une action que l’opticien soutient. Vous avez la possibilité 
+				de mettre votre opticien favori tout comme une action que vous voulez soutenir.
+			</p>
+			<p class="center green">
+				En plus du caractère engagé d’ Optic Store Finder, 
+				nous voulons vous emmener plus loin dans votre démarche 
+				pour mieux choisir vos lunettes.
+			</p>
+			
+			<div class="optic_tit_cat">Visagisme</div>
+
+			<p>
+				Mieux connaître son visage et ses caractéristiques est l’une des clés 
+				pour assumer pleinement le choix de ses lunettes.
+			</p>
+			<p class="center green">
+				Nous vous proposons une expérience intuitive et des conseils détaillés 
+				sur les formes et la colorimétrie à adopter 
+				pour un meilleur choix de lunettes en plus des conseils de votre opticien. 
+			</p>
+
+			<div class="optic_tit_cat">L'APRÈS-VENTE AVEC VOTRE OPTICIEN</div>
+
+			<p>
+				Optic store finder vous accompagne dans la période post-commande, 
+				en privilégiant des conseils et des propositions de prise en charge avec 
+				votre opticien dans les cas où vous en aurez besoin une fois vos nouvelles 
+				lunettes sur votre nez
+			</p>
+
+			<div class="optic_tit_cat">VOTRE PROFIL DE CONNEXION</div>
+
+			<div class="bgbtngray1">
+				Utile pour :
+			</div>
+
+			<ul class="usefull_for">
+				<li>Confirmer vos rendez-vous.</li>
+				<li>S’assurer du suivi de votre après-vente.</li>
+				<li>Faciliter nos échanges.</li>
+				<li>Intégrer plus d'opticiens autour de vous selon votre région ou ville.</li>
+			</ul>
+			
+			<div class="optic_tit_cat">TENDANCES</div>
+
+			<p>
+				Cette page vous informe de la mise à jour des associations engagées 
+				avec nous et vous informe des produits et services engagés, liés à l’optique 
+				selon les régions et sur toute la France
+			</p>
+		</div>
+
+		<div class="giresse1"><div></div></div>
 		
+		<div class="opticien_gray_area hwt" style="min-height: 100px; padding-top:20px;">
+			<p class="center green">
+				Optic Store Finder vous offre une expérience client unique 
+				ainsi que la liberté de choisir votre opticien selon 
+				vos envies ou centre d'intérêt, 
+				et vous permet de soutenir une cause commune avec votre opticien 
+				et pourquoi pas de vous engager pour une cause 
+				selon vos affinités
+			</p>
+			<p>A votre service</p>
+		</div>
+
 	</div>
 </div>
