--- a/www/index.html
+++ b/www/index.html
@@ -182,7 +182,7 @@
   <script src="js/app.js"></script>
   <script src="js/optic.js"></script>
 
-  <script>//console.clear()</script>
+  <script>console.clear()</script>
   
   <script src="js/services/InitService.js"></script>
   <script src="js/controllers/MainController.js"></script>
@@ -196,6 +196,7 @@
   <script src="js/controllers/ClickncollectController.js"></script>
   <script src="js/controllers/AfterSaleController.js"></script>
   <script src="js/controllers/ContactController.js"></script>
+  <script src="js/controllers/ParametersController.js"></script>
   
 </body>
 </html>
