--- a/www/pages/favoris.html
+++ b/www/pages/favoris.html
@@ -9,14 +9,9 @@
 				</a>
 			</div>
 			<div class="title">Mes favoris</div>
-			<div class="right">
-				<a href="#" class="link" ng-click="init()">
-					<div class="f7-icons">eyeglasses</div>
-				</a>
-			</div>
 		</div>
 	</div>
-	<div class="page-content">
+	<div class="page-content favorites">
         
         <div class="list media-list inset" style="margin:0 10px 0 0;">
             <ul ng-show="optics.length>0">
