--- a/www/pages/howitworks.html
+++ b/www/pages/howitworks.html
@@ -115,9 +115,11 @@
 					</td>
 					<td>
 						<span>RECYCLAGE</span>
-						Collectes des montures.
-						Utilisation d’eau en circuit fermé.
-						Tri des dechets.
+						<ul class="usefull_for">
+							<li>Collectes des montures.</li>
+							<li>Utilisation d’eau en circuit fermé.</li>
+							<li>Tri des dechets.</li>
+						</ul>
 					</td>
 				</tr>
 			</table>
