--- a/www/pages/aftersale.html
+++ b/www/pages/aftersale.html
@@ -17,6 +17,7 @@
         <div style="height: 0;"><input type="file" id="file" accept="image/*"/></div>
 
 		<div class="zinconfort" style="display:none">
+            <div style="margin-bottom:30px">Veuillez sélectionner la zone de l'incofort</div>
 			<img src="assets/img/av/zonedinconfort.png" usemap="#workmap" ng-click="ClickArea('VL gauche')"/>
 			<div class="f7-icons" ng-click="HideInconfort()">xmark_circle</div>
 		</div>
