--- a/www/pages/opticien.html
+++ b/www/pages/opticien.html
@@ -74,15 +74,59 @@
 					<!-- -->
 					
 					<div class="optic_tit_cat">LES ENGAGEMENTS</div>
-					<div class="nSubText">ECO RESPONSABLE</div>
+					<div class="nSubText" style="font-size:10px">• ECO RESPONSABLE</div>
 
-					<div class="carousel carousel-2">
-						<div>
-							<ul>
-								<li ng-repeat="mat in matieres track by mat.id" class="{{mat.class}}" ng-class="{'mat-active': mat.active==true}" ng-click="changematiere(mat.id)">{{mat.name}}</li>
-							</ul>
-						</div>
+					<table class="tab17">
+						<tr>
+							<td>
+								<div>
+									<span>Circuit court</span>
+									<img src="assets/img/howto/circuit_court.png" style="margin-top:3px"/>
+								</div>
+							</td>
+							<td>
+								<div>
+									<span>Made in France</span>
+									<img src="assets/img/howto/mif_lunettes.png" style="margin-top:20px"/>
+								</div>
+							</td>
+							<td>
+								<div>
+									<span>Recyclage</span>
+									<img src="assets/img/howto/recyclage.png" style="margin-top:5px"/>
+								</div>
+							</td>
+						</tr>
+					</table>
+
+					<div class="nSubText" style="font-size:10px">• ACTIONS SOLIDAIRES = 1€ POUR UNE PAIRE DE LUNETTES</div>
+
+					<div style="color:#AAA; font-size:10px; margin-bottom:35px;">
+						Relais collecte dons. (Dons reversés aux associations partenaires)
 					</div>
+
+					<table class="tab15">
+						<tr>
+							<td>
+								<div>
+									<span>Maladies rares de la vision.</span>
+									<img src="assets/img/howto/maladies_de_la_vision.png"/>
+								</div>
+							</td>
+							<td>
+								<div>
+									<span>Protection de l’enfance.</span>
+									<img src="assets/img/howto/protecenfance.png"/>
+								</div>
+							</td>
+							<td>
+								<div>
+									<span>Lutte contre les violences faites aux femmes.</span>
+									<img src="assets/img/howto/rubanblanc.png"/>
+								</div>
+							</td>
+						</tr>
+					</table>
 					
 					<!-- -->
 
