--- a/www/pages/parametres.html
+++ b/www/pages/parametres.html
@@ -31,8 +31,8 @@
 							<li>
 								<span>Synchronisation du calendrier</span>
 								<label class="toggle toggle-init">
-									<input type="checkbox" checked />
-									<span class="toggle-icon"></span>
+									<input type="checkbox" ng-checked="pref.sync_calendar" />
+									<span class="toggle-icon" ng-click="pref.sync_calendar=!pref.sync_calendar"></span>
 								</label>
 							</li>
 							<li>
@@ -129,20 +129,8 @@
         </div>
 
 		<div style="margin:0 15px 80px 15px">
-			<button class="col button button-fill button-round" ng-click="request()" style="font-size:11px">Obtenir une copie de vos données</button>
+			<button class="col button button-fill button-round" ng-click="request()" ng-show="isLoggedIn()" style="font-size:11px">Obtenir une copie de vos données</button>
 		</div>
 		
-
-		<!--
-        <div class="above_list_optk">
-
-            <form class="list" id="my-form" style="margin-top: 0px; margin-bottom: 15px; text-transform: none;">
-                <div style="margin:15px 15px 0 10px">
-
-                </div>
-            </form>
-
-        </div>-->
-        
 	</div>
 </div>
