--- a/www/index.html
+++ b/www/index.html
@@ -29,6 +29,7 @@
   
   <script type="text/javascript" src="js/jquery.min.js"></script>
   <script type="text/javascript" src="js/angular.min.js"></script>
+  <script type="text/javascript" src="js/angular-sanitize.min.js"></script>
   <script type="text/javascript" src="js/angular-touch.js"></script>
   <script type="text/javascript" src="js/ngTouch.min.js"></script>
     
