--- a/www/pages/aftersale.html
+++ b/www/pages/aftersale.html
@@ -109,6 +109,11 @@
                         <div class="timeline-item-divider"></div>
                         <div class="timeline-item-content">
                             <div class="timeline-item-inner">Êtes vous satisfait(e) ?</div>
+                            <div style="font-size:10px; color:#AAA; line-height:19px; margin-top:7px;">
+                                Une note ⟨ à 4* déclenche la possibilité d'être rappelé. 
+                                Votre note aide les autres à bénéficier des meilleurs services de 
+                                votre Opticien
+                            </div>
                             <div class="notation" style="text-align: center;">
                                 <div class="f7-icons star" ng-class="{'gray': note<1}" ng-click="NoteAfterSale(1)">star_fill</div>
                                 <div class="f7-icons star" ng-class="{'gray': note<2}" ng-click="NoteAfterSale(2)">star_fill</div>
@@ -118,6 +123,7 @@
                             </div>
                         </div>
                     </div>
+                    
                     <!-- Quelle en est l'origine ? -->
                     <div class="timeline-item" style="margin-bottom: -10px" ng-show="(recu=='yes') && (note!='' && note<=3)">
                         <div class="timeline-item-date"></div>
@@ -278,6 +284,7 @@
                         <div class="timeline-item-divider"></div>
                         <div class="timeline-item-content">
                             <div class="timeline-item-inner">Merci pour votre confiance</div>
+                            <textarea class="input_inconfort" placeholder="Commentaire ..." ng-show="note==4" ng-model="comment"></textarea>
                             <div style="width: 75%; margin: 0 auto; margin-top: 12px;">
                                 <a href="#" class="" ng-click="vote(3)">
                                     <button class="col button button-raised button-fill button-small button-round button_green ">Valider</button>
